Added seperate user controller
